<resources>
    <string name="app_name">DAGUS</string>
    <string name="que_estudiar">¿QUÉ VAS A ESTUDIAR HOY?</string>
    <string name="logo">logo</string>
    <string name="fondo">fondo</string>
    <string name="lupa">lupa</string>
    <string name="mate">MATEMÁTICAS</string>
    <string name="siguiente">Siguiente</string>
    <string name="materias">Materias</string>
    <string name="grados">Grados</string>
    <string name="revisa">Revisa tu conexión a Internet</string>
    <string name="facebook_app_id">262205514153715</string>
    <string name="fb_login_protocol_scheme">fb262205514153715</string>
    <string name="email">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="confirmacontra">Confirma tu contraseña</string>
    <string name="iniciasesiontit">INICIA SESIÓN_</string>
    <string name="registrotit">REGÍSTRATE_</string>
    <string name="olvidocontra">Olvidé mi contraseña&#8230;</string>
    <string name="iniciasesion">INICIA SESIÓN</string>
    <string name="registrate">REGÍSTRATE</string>
    <string name="nohaymaterias">No hay materias disponibles</string>
    <string name="nohayguias">No hay guías disponibles</string>
    <string name="contraNoIgual">¡Las contraseñas no coinciden, vuelve a intentar!</string>
    <string name="loginincorrecto">Tu e-mail o contraseña son incorrectos</string>
    <string name="exito">¡Éxito!</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="yaexiste">Un usuario con ese correo ya existe</string>
    <string name="credits">CREDITS</string>
    <string name="help">¿Qué puedes buscar?</string>
    <string name="registroexitoso">¡Registro Exitoso!</string>
    <string name="registrofallo">Algo salió mal... tu registro falló</string>
    <string name="code">Código</string>


    <string-array name="materias_array">
        <item>Matemáticas</item>
        <item>Español</item>
        <item>Cálculo</item>
        <item>Geografía</item>
        <item>Historia</item>
        <item>Biología</item>
        <item>Física</item>
        <item>Química</item>
        <item>MATEMÁTICAS</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="creditsbodytitle">
        Gracias a toda la talentosa familia de Dagus que hizo todo esto posible
    </string>

    <string name="creditsbody">
        Equipo de Desarrollo Tecnológico\n
        \tRicardo Michel Reyes - Deep Learning Artist\n
        \tSantiago Hernández (El hombre actor) - Head of Android\n
        \tEmiliano Hernández (Potra) - Head of iOS\n
        \tDiego Velázquez (Púas) - Head of Servers\n
        \tRicardo Barrera - Head of Web Front End\n
        \tIñaki Sigüenza (Bolsita) - Head of Web Back End\n
        \tDiego Ramírez (Pacha) - Servers Intern\n\n
        Desarrolladores de Contenido\n
        \tAndrea Hernández Castañeda - Lengua\n
        \tHugo Eyer - Filosofía\n
        \tSebastian Schietekat - Matemáticas\n
        \tNancy Ascencio - Geografía Económica\n
        \tDiego Bernal - Gráfica\n
        \tEmiliano Hernández - Derecho\n
        \tMartín Basile - Física/Área2\n
        \tCons Velandia - Biología\n
        \tElias Peña - Historia/Geografía\n
        \tSebas Morlan - Morfofisiología\n
        \tRo Villanueva (El Sol) - Matemáticas\n
        \tJavi Leal - Física/Área 1\n
        \tMinerva Polanco - Psicología/Introducción\n
        \tDaniel Camacho López - Química/Ética/Etimologías/EPS/Lógica\n
        \tDiego Ramírez (Pacha) - Contabilidad\n
        \tDiego Velázquez - Temas Selectos de Matemáticas\n\n
        Founder Team\n
        \tDann Centeno - CEO/Co-Founder\n
        \tRicardo Michel Reyes - Deep Learning Artist/CTO/Co-Founder\n
        \tIñaki Siguenza - Head of Web Back End/CDO/Co-Founder\n
        \tJosé Miguel Sandoval - General Council/ Co- Founder\n
        \tEmiliano Cordova - CMO/Co-Founder\n
        \tDaniel Camacho - CCO/Co-Founder\n
        \tJesus Valencia - CFO\n\n
        Especialmente gracias a\n
        \tLuis Alberto Rodriguez - Tutor Empresarial ITESM Campus Santa Fe\n
        \tA nuestra casa, la Incubadora de Alto Impacto del ITESM Campus Santa Fe\n\n
        Icons made by (Freepik) from www.flaticon.com\n
        (http://www.freepik.com/)\n
        Icons made by (Madebyoliver) from www.flaticon.com\n
        (http://www.flaticon.com/authors/madebyoliver)\n
    </string>

    <string name="helptitle">
        En Dagus podrás encontrar los apoyos que necesitas para cada una de tus materias, como guías, notebooks y videos.

    </string>

    <string name="helpbody">A través de este buscador puedes encontrar por las categorías de grado o una materia en específico.\n\n
        <b>Grados:</b>\n
        \t- 4to\n
        \t- 5to\n
        \t- 6to\n\n
        <b>Materias:</b>\n
        \t- Matemáticas\n
        \t- Biología\n
        \t- Química\n
        \t    Etc.\n
    </string>

</resources>
