<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.dagus.dagus.LandingActivity"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/landing_fondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/fondo"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/index" />

    <ImageView
        android:layout_width="284dp"
        android:layout_height="141dp"
        android:id="@+id/landing_logo"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logodagusmrwhiteslogan"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintTop_toTopOf="@+id/landing_fondo"
        android:layout_marginTop="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="@+id/landing_fondo"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/landing_fondo"
        app:layout_constraintTop_toBottomOf="@+id/landing_logo"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginTop="45dp"
        app:layout_constraintHorizontal_bias="0.504">

        <ImageView
            app:srcCompat="@drawable/lupablanca"
            android:layout_width="42dp"
            android:id="@+id/landing_lupa"
            android:contentDescription="@string/lupa"
            android:layout_height="30dp"/>

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landing_buscador"
            android:layout_weight="1"
            android:imeOptions="actionSearch"
            android:hint="@string/que_estudiar"
            style="@style/Widget.AppCompat.AutoCompleteTextView" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="119dp"
        android:layout_height="35dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="492dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:onClick="cerrarSesion"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/landing_logout"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/logout2"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/landing_cerrarsesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/cerrarsesion"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="432dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
